--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: dart
 dart:
-	- stable
-	- dev
+- stable
+- dev
+dart_task:
+- test: --platform vm
+- dartfmt
+- dartanalyzer: --fatal-warnings lib
